# Mandelpan

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
